fix: sonarqube refactors